force-app/main/default/objects/Dummy37__c/Dummy37__c.object-meta.xml
<CustomObject>
    <label>Dummy37</label>
    <nameField>
        <label>Dummy37 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy37</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>