force-app/main/default/objects/Dummy37__c/fields/FooBar020__c.field-meta.xml
<CustomField>
    <fullName>FooBar020__c</fullName>
    <label>FooBar020</label>
    <length>255</length>
    <type>Text</type>
</CustomField>