force-app/main/default/objects/Dummy37__c/fields/FooBar113__c.field-meta.xml
<CustomField>
    <fullName>FooBar113__c</fullName>
    <label>FooBar113</label>
    <length>255</length>
    <type>Text</type>
</CustomField>