force-app/main/default/objects/Dummy37__c/fields/FooBar115__c.field-meta.xml
<CustomField>
    <fullName>FooBar115__c</fullName>
    <label>FooBar115</label>
    <length>255</length>
    <type>Text</type>
</CustomField>